fixed the gap between nav and section div

--- a/styles/style.css
+++ b/styles/style.css
@@ -63,6 +63,7 @@ nav {
 	text-align: center;
 	background-color: #cccccc;
 	border-radius: 20px;
+	margin-top: -3rem;
 
 }
 
